# RandomFalloff

./: CMakeLists.txt  CMakePresets.json  README.html  README.md  index.cfg
source/: falloff.cpp  falloff.hpp  tool.cpp  tool.hpp
